# safematch-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  explain.py  weighting.py
backend/app/api/: __init__.py  dependencies.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/data/: README.md  ferry_terminals.json  hizli_transit_stops.json  mahalle_features.json
backend/app/db/: __init__.py  session.py  supabase.py
backend/app/models/: __init__.py  neighborhood.py
backend/app/schemas/: __init__.py  neighborhood.py  profile.py  recommendation.py
backend/app/scoring/: README.md  __init__.py  constants.py  normalizer.py  scorer.py  weights.py
backend/app/services/: __init__.py  neighborhood_service.py  recommendation_service.py  routing_service.py
data-pipeline/: .gitignore  SOURCES.md  pyproject.toml
data-pipeline/data/: MANUAL_OVERRIDES.md  ilce_fiyat.csv
data-pipeline/output/: earthquake_district_metrics.csv  earthquake_neighborhood_vs30.csv  istanbul_ilceler.geojson  istanbul_mahalleler.geojson
data-pipeline/scripts/: 01_fetch_boundaries.py  02_fetch_earthquake.py  02_fetch_poi.py  02b_extract_earthquake_metrics.py  02d_fetch_usgs_vs30.py  02e_extract_vs30_by_neighborhood.py  02f_build_earthquake_features.py  03_count_pois.py  04_earthquake_scores.py  05_build_features.py  06_filter_fast_transit.py  07_enrich_mahalle_features.py  mahallere_ayirma.py
(+77 files in other folders)
