[project]
name = "backend"
version = "0.1.0"
description = "SafeMatch Backend"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.50.0",
    "sqlalchemy>=2.0.51",
    "geoalchemy2>=0.20.0",
    "geopandas>=1.1.4",
    "shapely>=2.1.2",
    "supabase>=2.31.0",
    "pydantic-settings>=2.14.2"
]