[project]
name = "safematch-data-pipeline"
version = "0.1.0"
description = "SafeMatch AI data collection and geospatial processing pipeline"
requires-python = ">=3.11"

dependencies = [
    "beautifulsoup4>=4.12",
    "geopandas>=1.1",
    "numpy>=2.0",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pymupdf>=1.24",
    "pypdf>=6.0",
    "rasterio>=1.4",
    "requests>=2.32",
    "shapely>=2.0"
]